hit fix of registration email
